@@ -3,6 +3,7 @@ Revision history for Perl module RT::Client::REST
 0.45
   Marco Pessotto
    - Fixed uploading preventing objects to be stringified (RT#88919)
+   - Added option to get undecoded attachments (RT#90112)
 
 0.44
   Damien Krotkine
